src/objects/CFM_Survey_Batch_Project__c.object
<CustomObject>
    <description>CFM: Projects that are included in a Survey Batch</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Project__r.Owner__r.Id</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Project__r.OracleClientName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Method__c</fullName>
        <label>Add Method</label>
        <picklist>
            <picklistValues>
                <fullName>Manual Selection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Random</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>Project__r.CFM_Survey_Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Survey__c</fullName>
        <formula>Project__r.CFM_Survey_Contact__r.CFM_Do_Not_Survey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oracle_Client_Name__c</fullName>
        <description>Project Profile Oracle Client Name</description>
        <formula>Project__r.OracleClientName__c</formula>
        <label>Oracle Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Client_Number__c</fullName>
        <description>Project Profile Oracle Client Number</description>
        <formula>Project__r.OracleClientNumber__c</formula>
        <label>Oracle Client Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Complete__c</fullName>
        <description>Project&apos;s Oracle % Complete</description>
        <formula>Project__r.OraclePercentComplete__c</formula>
        <label>Oracle % Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Oracle_District__c</fullName>
        <description>Project&apos;s Oracle District</description>
        <formula>Project__r.OracleAECOMDistrict__c</formula>
        <label>Oracle District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Geography__c</fullName>
        <description>Project Profile Oracle Geography</description>
        <formula>Project__r.Oracle_Geography__c</formula>
        <label>Oracle Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_City__c</fullName>
        <description>Project Profile Oracle Project City</description>
        <formula>Project__r.OracleProjectCity__c</formula>
        <label>Oracle Project City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Country_State__c</fullName>
        <description>Project Profile Oracle Project Country / State</description>
        <formula>Project__r.OracleProjectCountryState__c</formula>
        <label>Oracle Project Country / State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Manager_E_Mail__c</fullName>
        <description>Project&apos;s Oracle PM&apos;s email</description>
        <formula>Project__r.Oracle_Project_Manager_lookup__r.Email</formula>
        <label>Oracle Project Manager E-Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Manager__c</fullName>
        <description>Project&apos;s Oracle Project Manager</description>
        <formula>Project__r.Oracle_Project_Manager_lookup__r.frm_Name__c</formula>
        <label>Oracle Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Region__c</fullName>
        <description>Project Profile Oracle Region</description>
        <formula>Project__r.Oracle_Region__c</formula>
        <label>Oracle Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Status__c</fullName>
        <description>Project Profile Oracle status</description>
        <formula>Project__r.OracleStatus__c</formula>
        <label>Oracle Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Super_Geography__c</fullName>
        <description>Project Profile Oracle Super Geography</description>
        <formula>Project__r.Oracle_Super_Geography__c</formula>
        <label>Oracle Super Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Reject_Other__c</fullName>
        <description>PM Comments to describe request to exclude project from survey due to &quot;Other reasons&quot;</description>
        <inlineHelpText>PM Comments to describe request to exclude project from survey due to &quot;Other reasons&quot;</inlineHelpText>
        <label>PM Reject Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PM_Reject_Reason__c</fullName>
        <description>PM Reason for request to exclude project from survey</description>
        <inlineHelpText>PM Reason for request to exclude project from survey</inlineHelpText>
        <label>PM Reject Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Client contact changed recently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client has formal feedback process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current proposal/bid with client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actual potential legal claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed more than 6 months ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Was/will be cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal government project using CPARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No project activity 6 months or more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client is an AECOM department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other reason</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PM_Status__c</fullName>
        <description>PM review status - confirm/reject</description>
        <inlineHelpText>PM review status - confirm/reject</inlineHelpText>
        <label>PM Status</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <formula>Project__r.Id</formula>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_ID__c</fullName>
        <formula>Project__r.Oracle_Project_Manager_lookup__r.Id</formula>
        <label>Project Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>Project__r.OracleStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Survey Batch Projects</relationshipLabel>
        <relationshipName>Survey_Batch_Projects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Status__c</fullName>
        <label>Qualtrics Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Transmitted_Date__c</fullName>
        <inlineHelpText>The date/time that the survey project was picked up by Qualtrics</inlineHelpText>
        <label>Qualtrics Transmitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending PM Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Qualtrics Submittal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Qualtrics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Batch_Project_Id__c</fullName>
        <description>tracks the Survey batch project ID for survey mapping.</description>
        <formula>Id</formula>
        <label>Survey_Batch_Project_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Batch__c</fullName>
        <label>Survey Batch</label>
        <referenceTo>CFM_Survey_Batch__c</referenceTo>
        <relationshipLabel>Survey Batch Projects</relationshipLabel>
        <relationshipName>Survey_Batch_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Contact_Email__c</fullName>
        <formula>Project__r.CFM_Survey_Contact__r.Email</formula>
        <label>Survey Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Contact__c</fullName>
        <formula>Project__r.CFM_Survey_Contact__r.FirstName &amp; &apos; &apos; &amp; Project__r.CFM_Survey_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Contact</label>
        <type>Text</type>
    </fields>
    <label>Survey Batch Project</label>
    <nameField>
        <displayFormat>SBP-{000000}</displayFormat>
        <label>Survey Batch Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Batch Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>